--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   },
   "homepage": "https://github.com/DaniPhilo/NASA_API#readme",
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0"
   },
   "devDependencies": {
